@@ -8,6 +8,7 @@ all_from        'lib/Module/ScanDeps.pm';
 requires        'File::Temp'                => '0';
 requires        'File::Spec'                => '0';
 requires        'Module::Build::ModuleInfo' => '0';
+requires        'version'                   => '0';
 build_requires  'Test::More'                => '0';
 
 install_script  'script/scandeps.pl';
