@@ -1,0 +1,5 @@
+package useVERSION;
+use 5.010;
+
+1;
+__END__
